--- a/style/srm/universal.css
+++ b/style/srm/universal.css
@@ -537,8 +537,10 @@ ul.button-list li a:hover {
 
 
 a.run-mailer {
+  display: inline-block;
   font-size: 0;
   margin-left: 0.2rem;
+  position: relative;
   text-decoration: none;
 }
 a.run-mailer:before {
@@ -550,6 +552,22 @@ a.run-mailer:before {
                "Noto Emoji",
                sans-serif;
   font-size: 1rem;
+}
+a.run-mailer.log-exists:hover:after {
+  background-color: #03c;
+  border-radius: 4px;
+  bottom: 100%;
+  box-shadow: 1px 2px 6px rgba(0,0,0,0.5);
+  color: #fff;
+  content: attr(data-content);
+  display: inline-block;
+  font-size: 0.7rem;
+  left: 0;
+  margin: auto;
+  padding: 0.3em 0.5em;
+  pointer-events: none;
+  position: absolute;
+  white-space: nowrap;
 }
 
 #mailer-container {
